Index page setup for Cars

--- a/CarsTARge22/ApplicationServices/CarsTARge22.ApplicationServices.csproj
+++ b/CarsTARge22/ApplicationServices/CarsTARge22.ApplicationServices.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CarsTARge22.Core\CarsTARge22.Core.csproj" />
     <ProjectReference Include="..\CarTARge22.Data\CarTARge22.Data.csproj" />
   </ItemGroup>
 
