--- a/CarsTARge22/CarsTARge22.Core/CarsTARge22.Core.csproj
+++ b/CarsTARge22/CarsTARge22.Core/CarsTARge22.Core.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CarTARge22.Data\CarTARge22.Data.csproj" />
+    <Folder Include="ServiceInterface\" />
   </ItemGroup>
 
 </Project>
