editing views and connecting to database

--- a/CarsTARge22/CarsTARge22/appsettings.json
+++ b/CarsTARge22/CarsTARge22/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0CI5CNU;Database=ShopTARge22;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
