--- a/CarsTARge22/CarsTARge22/CarsTARge22.csproj
+++ b/CarsTARge22/CarsTARge22/CarsTARge22.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.25" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.25">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CarsTARge22.Core\CarsTARge22.Core.csproj" />
     <ProjectReference Include="..\CarTARge22.Data\CarTARge22.Data.csproj" />
   </ItemGroup>
 
