--- a/CarsTARge22/CarsTARge22/appsettings.json
+++ b/CarsTARge22/CarsTARge22/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-0CI5CNU;Database=ShopTARge22;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-0CI5CNU;Database=CarTARge22;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
